fix fixed img overflow bug

--- a/resources/sass/components/_fixedimg.scss
+++ b/resources/sass/components/_fixedimg.scss
@@ -1,11 +1,12 @@
 .fixed-img {
   width: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
   img {
     height: 100px;
     width: 100%;
     object-fit: cover;
     object-position: bottom;
+    overflow: hidden;
   }
 }
 
